<resources>
    <string name="app_name">To Do List</string>
    <string name="task_hint">Your task comes here</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add_task">ADD</string>
    <string name="update">Update</string>

    <string name="add_a_new_task">Add a new task</string>
    <string name="edit_a_task">Edit a task</string>

    <string name="description">Description</string>
    <string name="date">10.10.2018</string>
    <string name="circle_number">1</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="show">Show</string>

    <string name="notification_channel">Primary</string>
    <string name="notification_title">New task was inserted!!!</string>
    <string name="notification_body">This is a reminder! A task you need to execute, not only added to your list!!!</string>
</resources>
