<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AddTaskActivity">

    <EditText
        android:id="@+id/task_editor"
        android:inputType="text"
        android:hint="@string/task_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="52dp" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:text="@string/high"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:checked="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialOrange"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:checked="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialYellow"
            android:text="@string/low" />
    </RadioGroup>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/add_task"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>